# EmbedAnything

./: .auditwheel.yml  .gitignore  .readthedocs.yaml  .readthedocs.yml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  embed_anything-0.4.3-cp310-cp310-manylinux_2_31_x86_64.whl.REMOVED.git-id  embed_anything.pyi  index.html  mkdocs.yml  model_optimized.onnx.REMOVED.git-id  objects.inv  output.md  pyproject.toml  release.Dockerfile  retrieval.py  server-cuda.Dockerfile  server.Dockerfile  sitemap.xml  test.ipynb  test.py  test2.ipynb  text.md  tree.md
.github/ISSUE_TEMPLATE/: Pull_Request_Template.md
.github/workflows/: CI.yml  CI_cuda.yml  docs.yml  main.yml
Guides/colpali/: index.html
RoadMap/roadmap/: index.html
assets/: demo.gif.REMOVED.git-id  icon.icns
bench/: colpali.pdf.REMOVED.git-id
blog/: index.html
docs/: CNAME  blog.md  conf.py  embed_anything.rst  index.md  index.rst  modules.rst  references.md
docs/Guides/: colpali.md  images.md
docs/RoadMap/: contribution.md  roadmap.md
docs/blog/: .authors.yml  index.md
docs/guides/: Qwen.md  Qwen3_Reranker.md  actix_server.md  adapters.md  colpali.md  images.md  ocr.md  onnx_models.md  semantic.md  troubleshooting.md  video.md
docs/roadmap/: roadmap.md
examples/: ColPali_Onnx.py  EmbedAnything_Pinecone_Integeration.ipynb  Qwen.py  RAG.ipynb  audio.py  audio.rs  bert.py  bert.rs  clip.py  clip.rs  cloud.rs  cohere_pdf.py  colbert.py  colbert_onnx.py  colpali.py  gemma3.py  hybridsearch.py  late_chunking.py  model2vec.py  onnx_models.py  pinecone.py  pinecone_example.ipynb  qwen.py  qwen3_reranker.py  reranker.py  s3_example.py  semantic_chunking.py  splade.py  test.py  test.rs  test_ort.py  text.py  text_ocr.py  video.py  web.py  web_embed.rs  zeroshot.ipynb
examples/SearchAgent/: lance_infer.py  run_embed_store.py
examples/adapters/: chromadb_adaptor.py  elastic.py  elasticsearch.py  lanceDB.ipynb  lancedb_adapter.py  milvus_db.py  opensearch.py  pinecone.py  pinecone_db.py  qdrant.py  vectordb.py  weaviate.ipynb  weaviate.py  weaviateDB.py  weaviate_db.py
examples/ea-bench/: audio.py  clip.py  pyproject.toml  text.py
examples/ea-gpu-bench/: pyproject.toml
examples/notebooks/: EmbedAnything_X_smolagent.ipynb  SingleStoreDB.ipynb  colpali.ipynb
guides/Qwen/: index.html
guides/Qwen3_Reranker/: index.html
guides/actix_server/: index.html
guides/adapters/: index.html
guides/colpali/: index.html
guides/images/: index.html
guides/ocr/: index.html
guides/onnx_models/: index.html
guides/semantic/: index.html
guides/troubleshooting/: index.html
guides/video/: index.html
processors/: Cargo.toml  README.md
processors/src/: docx_processor.rs  html_processor.rs  lib.rs  markdown_processor.rs  processor.rs  txt_processor.rs  video_processor.rs
processors/src/pdf/: mod.rs  pdf_processor.rs
processors/src/pdf/tesseract/: command.rs  error.rs  input.rs  mod.rs  output_boxes.rs  output_config_parameters.rs  output_data.rs  parse_line_util.rs
python/: Cargo.toml  README.md  bert.py  test.ipynb
python/embed_anything/: __init__.py  embed_anything.pyi  test.py  vectorDB.py  vectordb.py
python/python/embed_anything/: __init__.py  _embed_anything.cpython-311-x86_64-linux-gnu.so.REMOVED.git-id  _embed_anything.pyi  vectordb.py
python/src/: config.rs  lib.rs  s3_client.rs
python/src/models/: colbert.rs  colpali.rs  mod.rs  reranker.rs
references/: index.html
roadmap/contribution/: index.html
roadmap/roadmap/: index.html
rust/: Cargo.toml
rust/examples/: audio.rs  bert.rs  bert_copy.rs  bert_ort.rs  chunkers.rs  clip.rs  cloud.rs  cohere_pdf.rs  colbert.rs  colpali.rs  colpali_ort.rs  colsmol.rs  dino.rs  late_chunking.rs  late_chunking_qwen.rs  model2vec.rs  ollama.rs  openai-ocr.rs  ort.rs  ort_models.rs  reranker.rs  splade.rs  web_embed.rs
rust/src/: config.rs  file_loader.rs  hf_hub_utils.rs  lib.rs  s3_loader.rs  text_loader.rs
rust/src/chunkers/: cumulative.rs  mod.rs  statistical.rs
rust/src/embeddings/: embed.rs  mod.rs  utils.rs
rust/src/embeddings/cloud/: cohere.rs  gemini.rs  minimax.rs  mod.rs  openai.rs
rust/src/embeddings/embed/: audio.rs  builder.rs  embedder.rs  mod.rs  text.rs  types.rs  vision.rs
rust/src/embeddings/local/: bert.rs  clip.rs  colbert.rs  colpali.rs  colpali_ort.rs  colsmol.rs  colsmol_ort.rs  gemma3.rs  jina.rs  mod.rs  model2vec.rs  model_info.rs  modernbert.rs  ort_bert.rs  ort_colsmol.rs  ort_jina.rs  ort_qwen3.rs  pooling.rs  qwen3.rs  text_embedding.rs  vision_encoder.rs
rust/src/file_processor/: docx_processor.rs  html_processor.rs  markdown_processor.rs  mod.rs  pdf_processor.rs  processor.rs  txt_processor.rs  website_processor.rs
rust/src/file_processor/audio/: audio_processor.rs  mod.rs  pcm_decode.rs
rust/src/models/: bert.rs  colpali.rs  dinov2.rs  gemma.rs  gemma3.rs  jina_bert.rs  llama.rs  mod.rs  modernbert.rs  paligemma.rs  quantized_qwen3.rs  qwen3.rs  siglip.rs  with_tracing.rs
rust/src/models/clip/: mod.rs  text_model.rs  vision_model.rs
rust/src/models/idefics3/: array_processing.rs  mod.rs  model.rs  processing.rs  tensor_processing.rs
rust/src/reranker/: jina.rs  mod.rs  model.rs  qwen3.rs
rust/src/tesseract/: command.rs  input.rs  mod.rs  output_boxes.rs  output_config_parameters.rs  output_data.rs  parse_line_util.rs
search/: search_index.json
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs
site/: 404.html  index.html  objects.inv
site/references/: index.html
source/: conf.py  index.rst
src/: config.rs  embed.rs  file_embed.rs  file_loader.rs  lib.rs  parser.rs  pdf_processor.rs  text_loader.rs
src/chunkers/: cumulative.rs  mod.rs  statistical.rs
src/embedding_model/: bert.rs  clip.rs  cohere.rs  embed.rs  jina.rs  mod.rs  openai.rs
src/embeddings/: embed.rs  mod.rs
src/file_processor/: markdown_processor.rs  mod.rs  pdf_processor.rs  website_processor.rs
test_files/: bank.txt  court.pdf.REMOVED.git-id  test.docx  test.md  test.txt
tests/: test.py  test_1.py
tests/model_tests/: conftest.py  (+9 more)
(+51 files in other folders)
