[workspace]
members = [
    "processors",
    "rust",
    "python",
    ]
# Python package needs to be built by maturin.
exclude = ["python"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
description = "Embed anything at lightning speed"
repository = "https://github.com/StarlightSearch/EmbedAnything"
authors = ["Akshay Ballal <arballal95@gmail.com>"]
exclude = ["test_files/*", "python", "*.py", "pyproject.toml", "examples/images/*", "mkdocs.yml", "docs/*", "tests/*", ".github", "Dockerfile", "docs"]
version = "0.6.0"

[workspace.dependencies]
pdf-extract = "0.7.7"
candle-nn = { version = "0.8.3" }
candle-transformers = { version = "0.8.3" }
candle-core = { version = "0.8.3" }
candle-flash-attn = { version = "0.8.3" }

strum = "0.27.0"
strum_macros = "0.27.0"

[patch.crates-io]
pdf-extract = { git = "https://github.com/jrmuizel/pdf-extract.git", rev = "refs/pull/91/head" }

[profile.dev]
rpath = true

[profile.release]
rpath = true

