[workspace]
members = [
    "processors",
    "rust",
    "python",
    "server"
    ]
# Python package needs to be built by maturin.
exclude = ["python"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
description = "Embed anything at lightning speed"
repository = "https://github.com/StarlightSearch/EmbedAnything"
authors = ["Akshay Ballal <arballal95@gmail.com>"]
exclude = ["test_files/*", "python", "*.py", "pyproject.toml", "examples/images/*", "mkdocs.yml", "docs/*", "tests/*", ".github", "Dockerfile", "docs"]
version = "0.7.0"

[workspace.dependencies]
pdf-extract = "0.9.0"
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
candle-core = { version = "0.9.1" }
candle-flash-attn = { version = "0.9.1" }
processors-rs = { path = "processors", version = "=0.7.0" }

strum = "0.27.1"
strum_macros = "0.27.1"



[profile.dev]
rpath = true

[profile.release]
rpath = true

