[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "embed_anything_gpu"
requires-python = ">=3.8"
description = "Embed anything at lightning speed"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12", 
    "License :: OSI Approved :: MIT License"

]
dynamic = ["version"]
license = {file = "LICENSE"}

[tool.maturin]
features = ["extension-module"]
profile="release"
python-source = "python/python"
manifest-path = "python/Cargo.toml"
module-name = "embed_anything._embed_anything"

[project.urls]
Homepage = "https://github.com/StarlightSearch/EmbedAnything/tree/main"