[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "embed_anything"
version = "0.1.0"
description = "Embed anything at lightning speed"
authors = ["Akash Joshi <git@thewriting.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.7"
maturin = "^1.7.4"

[project]
name = "embed_anything_gpu"
version = "0.1.0"
requires-python = ">=3.8"
description = "Embed anything at lightning speed"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12", 
    "License :: OSI Approved :: MIT License"

]
dynamic = ["version"]
license = {file = "LICENSE"}
dependencies = ["onnxruntime-gpu==1.20.0"]

[tool.maturin]
features = ["extension-module"]
profile="release"
python-source = "python/python"
manifest-path = "python/Cargo.toml"
module-name = "embed_anything._embed_anything"

[project.urls]
Homepage = "https://github.com/StarlightSearch/EmbedAnything/tree/main"