[package]
name = "processors-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace  = true
authors.workspace = true
readme = "README.md"

[dependencies]
# HTTP Client
reqwest = { version = "0.12.15", default-features = false, features = ["json", "blocking", "gzip", "brotli", "deflate"] }

# Natural Language Processing
text-splitter = { version= "0.25.1", features=["tokenizers", "markdown"] }

# Error Handling
anyhow = "1.0.98"

# HTML processing
htmd = "0.1.6"
regex = "1.10.3"

# PDF processing
pdf-extract = {workspace = true}
docx-parser = "0.1.1"
docx-rust = "=0.1.8"
pdf2image = "0.1.3"
image = "0.25.6"
thiserror = "2.0.12"
tempfile = "3.19.1"

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = []
