[package]
name = "embed_anything_python"
version.workspace = true
edition = "2021"

[lib]
name = "_embed_anything"
crate-type = ["cdylib"]

[dependencies]
embed_anything = {path = "../rust", features = ["ort"]}
cudarc = { version = "0.16.3", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-loading"], default-features=false , optional=true}

processors-rs = {path = "../processors"}
pyo3 = { version = "0.23.2"}
tokio = { version = "1.39.0", features = ["rt-multi-thread"]}
strum =  {workspace = true}
strum_macros =  {workspace = true}

[features]
extension-module = ["pyo3/extension-module"]
mkl = ["embed_anything/mkl"]
accelerate = ["embed_anything/accelerate"]
cuda = ["embed_anything/cuda", "dep:cudarc"]
cudnn = ["embed_anything/cudnn"]
metal = ["embed_anything/metal"]
ort = ["embed_anything/ort"]
audio = ["embed_anything/audio"]
