[package]
name = "embed_anything"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace  = true
authors.workspace = true
readme = "../README.md"

[dependencies]
# File preprocessing
processors-rs = { workspace = true }

# Data Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.140"

# HTTP Client
reqwest = { version = "0.12.2", default-features = false, features = ["json", "blocking"] }

# Filesystem
walkdir = "2.4.0"

# Regular Expressions
regex = "1.10.3"

# Parallelism
rayon = "1.8.1"

# Natural Language Processing
tokenizers = {version="0.22.1", default-features = false, features=["http"]}
text-splitter = {version= "0.28.0", features=["tokenizers", "markdown"]}

tracing = "0.1.41"

# Hugging Face Libraries
hf-hub = { version = "0.4.2", default-features = false }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-core = { workspace = true }

# Error Handling
anyhow = "1.0.98"

# Asynchronous Programming
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

chrono = "0.4.38"
rand = "0.9.0"
itertools = "0.14.0"

# Image processing
image = "0.25.6"

# Audio Processing
symphonia = { version = "0.5.3", optional = true, features = ["all"] }
byteorder = "1.5.0"

ndarray = "0.16.1"
pdf2image = "0.1.2"
strum = {workspace = true}
base64 = "0.22.1"
# Optional Dependency
intel-mkl-src = { version = "0.8.1", optional = true }
accelerate-src = { version = "0.3.2", optional = true }
indicatif = "0.18.2"
statistical = "1.0.0"
half = "2.4.1"
candle-flash-attn = { workspace = true, optional = true }
model2vec-rs = "0.1.4"

# Logging
log = "0.4"
aws-sdk-s3 = {version = "1.110.0", features = ["rt-tokio"]}
aws-config = {version = "1.8.10", features = ["behavior-version-latest"]} 
aws-credential-types = "1.2.8"

[dev-dependencies]
tempdir = "0.3.7"
lazy_static = "1.4.0"
clap = { version = "4.5.20", features = ["derive"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = {version = "=2.0.0-rc.10", features = ["load-dynamic", "half"], optional = true}
[target.'cfg(target_os = "macos")'.dependencies]
ort = {version = "=2.0.0-rc.10", features = ["half"], optional = true}


[features]
default = ['rustls-tls']
mkl = ["dep:intel-mkl-src", "candle-nn/mkl", "candle-transformers/mkl", "candle-core/mkl"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "ort/cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal"]
audio = ["dep:symphonia"]
ort = ["dep:ort",]
rustls-tls = [
    "reqwest/rustls-tls",
    "hf-hub/rustls-tls",
    "tokenizers/rustls-tls"
]
