[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace  = true
authors.workspace = true

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
embed_anything = {path = "../rust", features = ["ort"]}

[[bin]]
name = "server"
path = "src/main.rs"