[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace  = true
authors.workspace = true

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
embed_anything = {path = "../rust"}


[target.'cfg(target_os = "macos")'.dependencies]
embed_anything = {path = "../rust", features = ["metal"]}


[[bin]]
name = "server"
path = "src/main.rs"