[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace  = true
authors.workspace = true

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
embed_anything = {path = "../rust"}


[target.'cfg(target_os = "macos")'.dependencies]
embed_anything = {path = "../rust", features = ["ort","audio"]}

[features]
metal = ["embed_anything/metal"]
mkl = ["embed_anything/mkl"]
accelerate = ["embed_anything/accelerate"]
cuda = ["embed_anything/cuda"]


[[bin]]
name = "server"
path = "src/main.rs"