[tool.poetry]
name = "ea-gpu-bench"
version = "0.1.0"
description = ""
authors = ["Akash Joshi <git@thewriting.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
embed-anything-gpu = {path = "../../target/wheels/embed_anything_gpu-0.1.0-cp312-cp312-macosx_11_0_arm64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
